--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
-  text-align: center;
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	gap: 2vh;
+	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+	color: blueviolet;
+}
+p {
+	color: rgb(244, 141, 44);
+}
+input {
+	padding: 1vw;
+	border: 2px solid rgb(244, 141, 44);
+	border-radius: 5px;
+	font-size: large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label {
+	color: blueviolet;
+}
+button {
+	padding: 5px;
+	font-size: larger;
+	background-color: rgb(244, 141, 44);
+	border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+	background-color: blueviolet;
+	color: white;
 }
 
-.App-link {
-  color: #61dafb;
+table {
+	padding: 3vw;
+	font-size: larger;
+	border: 2px solid rgb(244, 141, 44);
+	border-collapse: collapse;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+th,
+td {
+	border: 2px solid rgb(244, 141, 44) !important;
+
+	padding: 2vw;
 }
